<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Your operator doesn\'t support disabling call forwarding when your phone is busy.</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">Your operator doesn\'t support disabling call forwarding when your phone doesn\'t answer.</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="disable_cfnrc_forbidden">Your carrier doesn\'t support disabling call forwarding when your phone is unreachable.</string>
    <string name="updating_title">Call settings</string>
    <string name="error_updating_title">Call settings error</string>
    <string name="reading_settings">Reading settings\u2026</string>
    <string name="updating_settings">Updating settings\u2026</string>
    <string name="reverting_settings">Reverting settings\u2026</string>
    <string name="response_error">Unexpected response from network.</string>
    <string name="exception_error">Network or SIM card error.</string>
    <string name="stk_cc_ss_to_dial_error">SS request modified to DIAL request.</string>
    <string name="stk_cc_ss_to_ussd_error">SS request modified to USSD request.</string>
    <string name="stk_cc_ss_to_ss_error">SS request modified to new SS request.</string>
    <string name="fdn_check_failure">Your Phone app\'s Fixed Dialing Numbers setting is turned on. As a result, some call-related features aren\'t working.</string>
    <string name="radio_off_error">Turn on the radio before viewing these settings.</string>
    <string name="close_dialog">OK</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="change_num">Update</string>
    <string-array name="clir_display_values">

        
        <item>Network default</item>
        
        <item>Hide number</item>
        
        <item>Show number</item>
    </string-array>
    <string-array name="clir_values" translatable="false">

        
        <item><xliff:g>DEFAULT</xliff:g></item>
        
        <item><xliff:g>HIDE</xliff:g></item>
        
        <item><xliff:g>SHOW</xliff:g></item>
    </string-array>
    <string name="vm_changed">Voicemail number changed.</string>
    <string name="vm_change_failed">Couldn\'t change the voicemail number.\nContact your carrier if this problem persists.</string>
    <string name="fw_change_failed">Couldn\'t change the forwarding number.\nContact your carrier if this problem persists.</string>
    <string name="fw_get_in_vm_failed">Couldn\'t retrieve and save current forwarding number settings.\nSwitch to the new provider anyway?</string>
    <string name="no_change">No changes were made.</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="voicemail_default">My carrier</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="label_available">Available networks</string>
    <string name="load_networks_progress">Searching\u2026</string>
    <string name="empty_networks_list">No networks found.</string>
    <string name="search_networks">Search networks</string>
    <string name="network_query_error">Error while searching for networks.</string>
    <string name="register_on_network">Registering on <xliff:g id="network">%s</xliff:g>\u2026</string>
    <string name="not_allowed">Your SIM card doesn\'t allow a connection to this network.</string>
    <string name="connect_later">Can\'t connect to this network right now. Try again later.</string>
    <string name="registration_done">Registered on network.</string>
    <string name="sum_carrier_select">Choose a network operator</string>
    <string name="sum_search_networks">Search for all available networks</string>
    <string name="select_automatically">Choose automatically</string>
    <string name="sum_select_automatically">Automatically choose preferred network</string>
    <string name="register_automatically">Automatic registration\u2026</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="preferred_network_mode_wcdma_perf_summary">Preferred network mode: WCDMA preferred</string>
    <string name="preferred_network_mode_gsm_only_summary">Preferred network mode: GSM only</string>
    <string name="preferred_network_mode_wcdma_only_summary">Preferred network mode: WCDMA only</string>
    <string name="preferred_network_mode_gsm_wcdma_summary">Preferred network mode: GSM / WCDMA</string>
    <string name="preferred_network_mode_cdma_summary">Preferred network mode: CDMA</string>
    <string name="preferred_network_mode_cdma_evdo_summary">Preferred network mode: CDMA / EvDo</string>
    <string name="preferred_network_mode_cdma_only_summary">Preferred network mode: CDMA only</string>
    <string name="preferred_network_mode_evdo_only_summary">Preferred network mode: EvDo only</string>
    <string name="preferred_network_mode_cdma_evdo_gsm_wcdma_summary">Preferred network mode: CDMA/EvDo/GSM/WCDMA</string>
    <string name="preferred_network_mode_lte_summary">Preferred network mode: LTE </string>
    <string name="preferred_network_mode_lte_gsm_wcdma_summary">Preferred network mode: GSM/WCDMA/LTE</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="manage_fdn_list">FDN list</string>
    <string name="fdn_activation">FDN activation</string>
    <string name="change_pin2">Change PIN2</string>
    <string name="sum_fdn_change_pin">Change PIN for FDN access</string>
    <string name="sum_fdn_manage_list">Manage phone number list</string>
    <string name="enter_pin2_text">PIN2</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="set_primary_title">Set as primary account</string>
    <string name="set_primary_summary">Used for outbound calls</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="auth_username_title">Authentication username</string>
    <string name="auth_username_summary">Username used for authentication</string>
    <string name="default_preference_summary">&lt;Not set&gt;</string>
    <string name="display_name_summary">&lt;Same as username&gt;</string>
    <string name="optional_summary">&lt;Optional&gt;</string>
    <string name="default_port" translatable="false">5060</string>
    <string name="default_transport" translatable="false">UDP</string>
    <string name="advanced_settings_show">▷ Touch to show all</string>
    <string name="sip_system_decide" translatable="true">Automatic</string>
    <string name="domain_address" translatable="false">SipDomain</string>
    <string name="username" translatable="false">UserName</string>
    <string name="password" translatable="false">Password</string>
    <string name="display_name" translatable="false">DisplayName</string>
    <string name="proxy_address" translatable="false">ProxyAddress</string>
    <string name="port" translatable="false">Port</string>
    <string name="transport" translatable="false">Protocol</string>
    <string name="send_keepalive" translatable="false">SendKeepAlive</string>
    <string name="set_primary" translatable="false">SetPrimary</string>
    <string name="advanced_settings_container" translatable="false">advanced settings container</string>
    <string name="auth_username" translatable="false">AuthUserName</string>
    <string name="sub_1">SUB 1</string>
    <string name="sub_2">SUB 2</string>
    <string name="callind_multi_sim_card">SUBS Card Settings</string>
    <string name="data_title">Data Call</string>
    <string name="priority_sub_title">Priority Subscription</string>
    <string name="third_sim_support">Third Support</string>
    <string name="third_sim_support_summary">For 3rd app, dial or send sms</string>
    <string name="third_data_support_title">Data service</string>
    <string name="sim_data_support_summary">Used for Switch Card</string>
</resources>