<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<AuroraPreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:aurora="http://schemas.android.com/apk/res/com.aurora">

    <!-- Rearranged to use EditPinPreference -->
    <com.aurora.callsetting.EditPinPreference 
        aurora:aurorakey="button_fdn_enable_key" 
        aurora:aurorapersistent="false"
        aurora:auroradialogMessage="@string/enter_pin2_text"
        aurora:auroratitle="@string/fdn_activation"/>
        
    <!-- Rearranged to use EditPinPreference -->
    <com.aurora.callsetting.EditPinPreference 
        aurora:aurorakey="button_change_pin2_key" 
        aurora:auroratitle="@string/change_pin2"
        aurora:auroradialogTitle="@string/change_pin2"
        aurora:aurorasummary="@string/sum_fdn_change_pin"
        aurora:aurorapersistent="false"/>
        
    <AuroraPreferenceScreen 
        aurora:aurorakey="button_fdn_list_key" 
        aurora:auroratitle="@string/manage_fdn_list"
        aurora:aurorasummary="@string/sum_fdn_manage_list"
        aurora:aurorapersistent="false">
        
        <!-- Intent to lauch the FDN list. -->
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.aurora.callsetting"
            android:targetClass="com.aurora.callsetting.FdnList" />
            
    </AuroraPreferenceScreen>
    
</AuroraPreferenceScreen>
